# CompilePrincipleHw

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  readme.md  run.sh
.claude/: CLAUDE.md  plan.md  settings.local.json  status.md
Clexer/: Clexer.sln
Clexer/Clexer/: BasicRules.cpp  BasicRules.h  Clexer.vcxproj  Clexer.vcxproj.filters  main.cpp
Clexer/Clexer/x64/Debug/: Clexer.exe.recipe  vc143.idb
Clexer/Clexer/x64/Debug/Clexer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Clexer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
antlr4/: settings.gradle.kts
antlr4/gradle/wrapper/: gradle-wrapper.properties
antlr4/src/main/clexer/: C.g4  CParser.g4  OverC.g4
docs/: CInAntlr4.md  References.md  assignment.md  assignment2.md  promised_lex_output.md
docs/report/: figure_prompts.md  report.aux  report.fdb_latexmk  report.fls  report.tex  report.toc  report.xdv
flex/: clex  input.c  input.rs  lex.yy.c  main.l  output.tsv  output.txt  test.cpp
flex/include/: TokenStream.h  config.h  lexer.h
flex/src/: TokenStream.cpp  lex.yy.cpp  main.l  parser.cpp
parser/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  parser.cpp
parser/include/: IRGenerator.h  SemanticAnalyzer.h  SemanticType.h  Symbol.h  Token.h  TokenStream.h  Type.h  config.h  gui.h  lexer.h  logprintf.h  parser.h
parser/src/: IRGenerator.cpp  SemanticAnalyzer.cpp  SemanticType.cpp  Symbol.cpp  TokenStream.cpp  Type.cpp  clex  gui.cpp  lex.yy.cpp  lexer.l  main.cpp  parser.cpp
parser/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
parser/testfiles/: input.rs  lexer_output.tsv  semantic_error_tests.rs  semantic_tests.sh  test_1_1.rs  test_1_1_lexer.tsv  test_1_1_parse.txt  test_1_2.rs  test_1_2_lexer.tsv  test_1_2_parse.txt  test_1_3.rs  test_1_3_lexer.tsv  test_1_3_parse.txt  test_1_4.rs  test_1_4_lexer.tsv  test_1_4_parse.txt  test_1_5.rs  test_1_5_lexer.tsv  test_1_5_parse.txt  test_2.rs  test_2_lexer.tsv  test_2_parse.txt  test_3.rs  test_3_lexer.tsv  test_3_parse.txt  test_4.rs  test_4_lexer.tsv  test_4_parse.txt  test_5.rs  test_5_lexer.tsv  test_5_parse.txt  test_6.rs  test_6_lexer.tsv  test_6_parse.txt  test_8.rs  test_8_lexer.tsv  test_8_parse.txt  test_9.rs  test_9_lexer.tsv  test_9_parse.txt  (+3 more)
